# RVAMusicCalendar

./: .gitignore  Dockerfile  GoogleCalendarService.py  crontab  docker-compose.yaml  main.py  pyproject.toml  readme.md  seleniumDriver.py
.github/workflows/: supabaseDeploy.yaml
data/: Event.py  VenueInfo.py
scrapers/: broadberryScraper.py  etixScraper.py  theCamelScraper.py  theNationalScraper.py
src/: imageGenerator.py  main.py  scraper.py  seleniumDriver.py
src/data/: Event.py
src/data/db/: dbService.py
src/data/model/: Event.py
src/scrapers/: broadberryScraper.py  etixScraper.py  getTightScraper.py  theCamelScraper.py  theNationalScraper.py
src/templates/: html.jinja  image.jinja
supabase/: config.toml  test.csv
supabase/functions/GetMusicMetadata/: index.ts
